--- a/presentation/css/revealjs.css
+++ b/presentation/css/revealjs.css
@@ -14,7 +14,15 @@
  *********************************************/
 
 html, body, .reveal div, .reveal span, .reveal applet, .reveal object, .reveal iframe,
-.reveal h1, .reveal h2, .reveal h3, .reveal h4, .reveal h5, .reveal h6, .reveal p, .reveal blockquote, .reveal pre,
+/*.reveal h1,
+.reveal h2,
+.reveal h3,*/
+.reveal h4,
+.reveal h5,
+.reveal h6,
+.reveal p,
+.reveal blockquote,
+.reveal pre,
 .reveal a, .reveal abbr, .reveal acronym, .reveal address, .reveal big, .reveal cite, .reveal code,
 .reveal del, .reveal dfn, .reveal em, .reveal img, .reveal ins, .reveal kbd, .reveal q, .reveal s, .reveal samp,
 .reveal small, .reveal strike, .reveal strong, .reveal sub, .reveal sup, .reveal tt, .reveal var,
@@ -67,7 +75,7 @@ body {
  * HEADERS
  *********************************************/
 
-.reveal h1,
+/*.reveal h1,
 .reveal h2,
 .reveal h3,
 .reveal h4,
@@ -85,7 +93,7 @@ body {
 .reveal h2 { font-size: 2.11em;	}
 .reveal h3 { font-size: 1.55em;	}
 .reveal h4 { font-size: 1em;	}
-
+*/
 
 /*********************************************
  * VIEW FRAGMENTS
