--- a/client/css/markers.css
+++ b/client/css/markers.css
@@ -8,9 +8,23 @@
     stroke-width: 1;
 }
 
+.halo{
+	stroke-width: 0; stroke-opacity: 0; stroke: hsl(155, 100%, 0%);
+	fill: black; fill-opacity: 0;
+	transition: fill-opacity 2s;
+}
+
+.halo.updating{
+	stroke-width: 3; stroke-opacity: 1; stroke: red;
+}
+
 .recyclingCenter.selected{
 	stroke: hsl(0, 100%, 100%);
 	stroke-width: 2;
+}
+
+.recyclingCenter.updating {
+	stroke-width: 3; stroke-opacity: 1; stroke: red;
 }
 
 .recyclingCenterName{
@@ -18,6 +32,9 @@
 	color: 	#DDD;
 }
 
+.recyclingCenterName.updating{
+	color: red;
+}
 
 .recyclingCenterName.selected{
 	text-decoration: underline;
