--- a/css/style.css
+++ b/css/style.css
@@ -12,17 +12,41 @@
     vertical-align: top;
 }
 
-.level{
-    display: inline-block;
-    width : 10px;
-    height: 10px;
+.border{
+    border: solid 1px black;
 }
-.green{
+.colorBlock.border{
+    width: 18px;
+    height : 18px ;
+}
+.inline {
+    display: inline-block;
+}
+.colorBlock{
+    width : 20px;
+    height: 20px;
+}
+.greenFont{
     background-color: green;
 }
-.orange{
+.yellowFont{
+    background-color: yellow;
+}
+.orangeFont{
     background-color: orange;
 }
-.red{
+.redFont{
     background-color: red;
+}
+.greenText{
+    color: green;
+}
+.yellowText{
+    color:  yellow;
+}
+.orangeText{
+    color: orange;
+}
+.redText{
+    color: red;
 }
