Change name rcname to placename

--- a/app/clients/Admin/css/style.css
+++ b/app/clients/Admin/css/style.css
@@ -14,7 +14,7 @@
 	background-color: white;
 }
 
-.ant .rcName {
+.ant .placeName {
 	display: block; width: 100%; margin: 0 auto;
 	font-weight: bold; font-size: 1.5em;
 }
