--- a/app/clients/App/css/panel.css
+++ b/app/clients/App/css/panel.css
@@ -51,13 +51,13 @@
 	width: 100%; height: 100px;
 }
 
-#recyclingCenter-name {
+#place-name {
 	text-align: center;
 	margin-top: 2em;
 	font-size: 1em;
 }
 
-.recyclingCenter-icon {
+.place-icon {
 	display: inline;
 	margin: 0 0.5em;
 	font-size: 1em;
