List of sensors ID when on click on ant ID

--- a/app/clients/Admin/css/style.css
+++ b/app/clients/Admin/css/style.css
@@ -113,3 +113,8 @@ li .modifiable{
 .ant.recording .6sense {
 	color: black;
 }
+
+.selector.currentID.onClick {
+	cursor: pointer;
+	transition: all 0.30s ease-in-out;
+}
