--- a/core/clients/Admin/css/style.css
+++ b/core/clients/Admin/css/style.css
@@ -84,6 +84,11 @@ li .modifiable{
 .sensorPhone_number.modifiable.updating {
 	color: green;
 }
+
+.DisplaySensorName.modifiable.updating {
+	color: green;
+}
+
 /* quipu status */
 
 .place.updating {
