Fix a bug on Update name in panel

--- a/core/clients/Admin/css/style.css
+++ b/core/clients/Admin/css/style.css
@@ -89,6 +89,10 @@ li .modifiable{
 	color: green;
 }
 
+.DisplaySensorPhoneNumber.modifiable.updating {
+	color: green;
+}
+
 /* quipu status */
 
 .place.updating {
