--- a/core/clients/Admin/css/style.css
+++ b/core/clients/Admin/css/style.css
@@ -228,7 +228,7 @@ li .modifiable{
 CSS PANEL
 */
 .displaySensor div{
-	display: inline-block; margin: 0 1em;
+	display: inline-block; margin: .5em;
 }
 
 .displaySensor li * {
