--- a/css/tabs.css
+++ b/css/tabs.css
@@ -1,5 +1,5 @@
 .tabs{
-    display: flex;
+    display: flex; margin-bottom: 1em;
     justify-content: center;
 }
 
@@ -9,5 +9,20 @@
 }
 
 .tabs > .active {
-    outline: 1px solid gold;
+	background: #333;
+    color: #EEE;
+}
+
+input.login {
+	position: absolute; top: 1em; right: 1em; height: 2em;
+}
+
+@media (max-width: 40em) {
+    .tabs{
+        margin-top: 1.5em;
+    }
+
+    input.login {
+		position: absolute; top: 0em; right: 0em; width: 100%; height: 1.5em; padding: 0 .5em;
+	}
 }
