--- a/core/clients/Admin/css/other.css
+++ b/core/clients/Admin/css/other.css
@@ -36,7 +36,15 @@ body{
 }
 
 li .modifiable{
-	width: 20%;
+	width: 23%;
+}
+
+.modifiable.phone-number{
+	width: 50%;
+}
+
+.modifiable.sensorName{
+	width: 40%;
 }
 
 .modifiable.updating {
