--- a/core/clients/Admin/css/sensorPanel.css
+++ b/core/clients/Admin/css/sensorPanel.css
@@ -19,12 +19,8 @@
 }
 
 .sensor{
-	display: block; margin: 1em; padding: .2em;
+	display: block; margin: 1em; padding: .2em; position: relative;
 	border: 1px solid white;
-}
-
-.sensor div{
-	display: inline-block; margin: .5em;
 }
 
 .sensor li * {
@@ -60,7 +56,7 @@
 	color: black;
 }
 
-.orphan {
+.sensor.orphan {
 	font-weight: bold;
     color: white;
     background-color: orange;
