--- a/core/clients/Admin/css/placePanel.css
+++ b/core/clients/Admin/css/placePanel.css
@@ -24,8 +24,12 @@
 	font-weight: bold; font-size: 1.5em;
 }
 
-.place li * {
-	display: inline-block; margin: 0 1em;
+.place li {
+	display: block; margin: 0;
+}
+
+.place li div {
+	display: inline-block;; margin: 0 0.2rem;
 }
 
 .place.updating {
@@ -54,6 +58,11 @@
 
 .ant.sensorName {
 	font-weight: bold;
+}
+
+.ant-unistalling {
+    text-align: center;
+    margin-top: 0.5rem;
 }
 
 /* quipu status */
@@ -127,7 +136,7 @@
 
 
 .placeOrphan li * {
-	display: inline-block; margin: 0 1em;
+	display: inline-block; margin: 0 1rem;
 }
 
 .command-manager {
@@ -152,4 +161,9 @@
 .clear {
 	display: inline;
 	color: red;
+}
+
+.low-importance {
+	color: #999999;
+	font-size: small;
 }
