--- a/core/clients/Admin/css/placePanel.css
+++ b/core/clients/Admin/css/placePanel.css
@@ -28,12 +28,7 @@
 	display: inline-block;; margin: 0 .3rem;
 }
 
-.place.updating {
-	background-color: red;
-	transition: background-color 1s;
-}
-
-.place.updating {
+.ant.updating {
 	background-color: red;
 	transition: background-color 1s;
 }
@@ -71,7 +66,11 @@
 	color: black;
 }
 
-.ant.3Gconnected .quipu {
+.3G_connected{
+	color:purple;
+}
+
+.ant.3G_connected .quipu {
 	color: green;
 }
 
